Resolved #1119_Volunteer_Avatar_Overlap

--- a/src/app/_components/user-avatar/user-avatar.component.scss
+++ b/src/app/_components/user-avatar/user-avatar.component.scss
@@ -35,7 +35,3 @@ $avatar-font-color: #fff;
 .card-avatar, .card-avatar-content {
   border-radius: 50%;
 }
-
-.card-avatar {
-  margin-left: -1.5rem;
-}
